--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,19 @@
     <string name="BasicTimer">Basic</string>
     <string name="TimerList">List</string>
 
+    <string name="hour">시</string>
+    <string name="minute">분</string>
+    <string name="sec">초</string>
+
+    <string name="start">시작</string>
+    <string name="pause">일시 중지</string>
+    <string name="cancle">취소</string>
+    <string name="done">해제</string>
+    <string name="replay">다시 시작</string>
+
+    <string name="zero">0</string>
+    <string name="colon">:</string>
+
+
+
 </resources>
