--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -11,7 +11,7 @@
     <string name="cancel">취소</string>
     <string name="done">해제</string>
     <string name="replay">다시 시작</string>
-    <string name="add">추가하기</string>
+    <string name="add">당신의 타이머</string>
     <string name="name">타이머 이름</string>
     <string name="save">저장</string>
     <string name="saveFailure">저장에 실패했습니다. 다시 시도해 주세요.</string>
