--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,7 @@
 
     <string name="deleteInfo">Delete Timer</string>
     <string name="askDelete">Are you sure you want to delete  \"%1$s\" Timer ?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
