dataBinding + 타이머 카운트 다운 종료 오류 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="selectON">PUBLIC</string>
     <string name="onOff">ON/OFF</string>
 
+    <string name="number" translatable="false">%02d</string>
 
 
 </resources>
