modify 설정- 알람(진동/소리) onoff 커스텀

--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -42,4 +42,7 @@
     <string name="selectON">공개</string>
     <string name="onOff">공개/비공개</string>
     <string name="Itemcnt">당신의 타이머 개수 : ($02d)</string>
+    <string name="Alarm">알람</string>
+    <string name="vibration">진동</string>
+    <string name="sound">소리</string>
 </resources>
